# traffic-monitor

./: .gitignore  README.md  package.json
backend/: CMakeLists.txt
backend/src/: AppConfig.cpp  AppConfig.hpp  CommandRunner.cpp  CommandRunner.hpp  ConnectionSampler.cpp  ConnectionSampler.hpp  HttpServer.cpp  HttpServer.hpp  JsonUtil.cpp  JsonUtil.hpp  Logger.cpp  Logger.hpp  Models.hpp  NetworkSampler.cpp  NetworkSampler.hpp  PublicIpService.cpp  PublicIpService.hpp  RemoteMonitor.cpp  RemoteMonitor.hpp  SnapshotService.cpp  SnapshotService.hpp  Util.cpp  Util.hpp  main.cpp
config/: remote-targets.json  settings.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.jsx  styles.css
frontend/src/components/: Empty.jsx  IpInfoCard.jsx  MetricCard.jsx  MiniRateChart.jsx  RateBars.jsx  TrafficChart.jsx
frontend/src/hooks/: useSnapshot.js
frontend/src/utils/: connections.js  format.js
frontend/src/views/: Logs.jsx  Overview.jsx  Processes.jsx  Protocols.jsx  Remote.jsx
macos/: TrafficMonitorApp.swift
scripts/: build_all.sh  generate_app_icons.swift  package_dmg.sh
